Updated links to open in new tab

--- a/10KTablets.html
+++ b/10KTablets.html
@@ -41,7 +41,7 @@
       <div class="col-md-4">
 
           <p> This project was part of my work as a UX Designer and Researcher in the NYC Mayor's Office of the Chief Technology Officer. In response to COVID-19, we distributed 10,000 internet-enabled tablets to vulnerable older adults in public housing. I was involved in the end-to-end service design of the program including creating data visualizations to rapidly identify participants, designing a holistic unboxing experience, designing an accessible onboarding app, creating an internal tracking dashboard to visualize program stats, and conducting evaluative user research with participants. </p>
-          <p >I'll be updating the details of this project soon. In the meantime, you can check out <a href= "img/cto_opendataweek_10ktabletsPDF.pdf">my presentation on the work</a> for the 2021 NYC Open Data Week. </p>
+          <p >I'll be updating the details of this project soon. In the meantime, you can check out <a href= "img/cto_opendataweek_10ktabletsPDF.pdf" target="_blank">my presentation on the work</a> for the <a href="https://2021.open-data.nyc/" target="_blank"> 2021 NYC Open Data Week</a>. </p>
 
       </div>
       <div class="col"></div>
