--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -40,7 +40,7 @@
       <div class="col"></div>
     </div>
 
-  
+
 
     <div class="row description_section">
       <div class="col"></div>
@@ -93,7 +93,7 @@
 
           <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an educational insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
-          <p> View all of our redesigns and learn more <a href= "img/CodeEnforcementPresentation.pdf">here</a>.</p>
+          <p> View all of our redesigns and learn more <a href= "img/CodeEnforcementPresentation.pdf" target="_blank">here</a>.</p>
 
       </div>
       <div class="col"></div>
