--- a/thesis.html
+++ b/thesis.html
@@ -180,7 +180,7 @@
 <p>  Featured in<a href="https://www.aisp.upenn.edu/centering-equity/" target="_blank"> <em>A Toolkit for Centering Racial Equity Throughout Data Integration </em></a> from Actionable Intelligence for Social Policy (AISP) at the University of Pennsylvania
 </p>
 
-<p>Featured in<a href="https://datajusticelab.org/towards-democratic-auditing-civic-participation-in-the-scoring-society/"> Critical Data Literacy Tools: A Guidebook</a> from the Data Justice Lab at the University of Cardiff</p>
+<p>Featured in<a href="https://datajusticelab.org/towards-democratic-auditing-civic-participation-in-the-scoring-society/" target="_blank"> Critical Data Literacy Tools: A Guidebook</a> from the Data Justice Lab at the University of Cardiff</p>
 
       </div>
       <div class="col"></div>
