--- a/trustpatterns.html
+++ b/trustpatterns.html
@@ -87,7 +87,7 @@
 
           <p> We're looking into both the cognitive processes involved in trust patterns (such as the language used), and the physical aesthetics (such as color). Our findings are drawn from quantitative survey results, qualitative interviews, and current research in psychology and UI/UX design. </p>
 
-          <p> You can read more about the research <a href="https://medium.com/digitalhks/meet-research-fellow-caroline-sinders-3fb4f8e6e4ee"> here</a>.</p>
+          <p> You can read more about the research <a href="https://medium.com/digitalhks/meet-research-fellow-caroline-sinders-3fb4f8e6e4ee" target="_blank"> here</a>.</p>
       </div>
       <div class="col"></div>
     </div>
