--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <p><em>interactive storytelling website about predictive analytics in city government </em></p>
         <p class="tags">  user research + UI/UX design + development + data analysis</p>
         <h2 class="index_list"><a href="codeEnforcement.html">UX of Ticketing</a></h2>
-        <p><em>re-design of Boston's code enforcement ticketing touchpoints</em> <p>
-        <p class="tags">  user research + service design + graphic design</p>
+        <p>re-design of Boston's code enforcement ticketing touchpoints<p>
+        <p class="tags"><em>  user research + service design + graphic design</em> </p>
   <!--      <h2><a href="trustpatterns.html">trust patterns</a></h2>
         <p>re-design of Boston's ticketing touchpoints </p>
         <p><em>  user research + service design + graphic design</em></p>
