--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <p>interactive game concept for subways </p>
         <p><em>  interaction design + graphic design</em></p> -->
         <h2><a href="openMRS.html">open source documentation</a></h2>
-        <p>new developer guide for a OpenMRS, a free and open source medical record system <p>
-        <p><em>  user research + documentation</em></p>
+        <p><em> new developer guide for a OpenMRS, a free and open source medical record system</em> <p>
+        <p class="tags"> user research + documentation</p>
         <h2><a href="ceramics.html">ceramics</a></h2>
         <p><em>just for fun</em><p>
         <h2><a href="photography.html">photography</a></h2>
