--- a/10KTablets.html
+++ b/10KTablets.html
@@ -23,7 +23,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>10K Tablets for Seniors </h1>
+    <h1>10K Tablets </h1>
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-6">
