updated page style for automating nyc

--- a/automatingNYC.html
+++ b/automatingNYC.html
@@ -22,9 +22,16 @@
 
 <body>
 
-  <div class="container-fluid">
-    <h1>automating.nyc </h1>
-    <div class="row  description_section">
+    <div class="row  page_header">
+      <div class="col-md-4"></div>
+      <div class="col-md-6">
+        <h1>automating.nyc </h1>
+      </div>
+      <div class="col"></div>
+    </div>
+
+  <div class="container-fluid page-container">
+  <!--  <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
         <a href="https://automating.nyc/" target="_blank">
@@ -32,7 +39,28 @@
       </a>
       </div>
       <div class="col"></div>
+    </div> -->
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h2> tldr </h2>
+      </div>
+      <div class="col-md-6">
+
+          <p> We created an interactive, storytelling website to help people understand how data, algorithms, and predictive analytics are used in New York City government.</p>
+      </div>
+      <div class="col"></div>
     </div>
+
+      <div class="row  description_section">
+        <div class="col-md-4"></div>
+        <div class="col-md-6">
+
+          <img src="img/thesis.png" class="body_images_horizontal" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
+
+        </div>
+        <div class="col"></div>
+      </div>
 
 
     <div class="row description_section">
@@ -40,7 +68,7 @@
       <div class="col-md-2">
         <h2> client </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p> This project is my applied thesis for the Harvard Kennedy School. It was supported by the <a href="https://www.jainfamilyinstitute.org/" target="_blank"> Jain Family Institute</a>.</p>
 
@@ -54,7 +82,7 @@
       <div class="col-md-2">
         <h2> problem </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p> How can we help people understand big data and algorithms in public services?</p>
 
@@ -67,7 +95,7 @@
       <div class="col-md-2">
         <h2> solution </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p> We created <a href="https://automating.nyc/" target="_blank">Automating.NYC</a> to open the black box around data, algorithms, and predictive analytics in city government and encourage people to advocate for automated decision systems that are designed with equity in mind.</p>
 
@@ -80,7 +108,7 @@
       <div class="col-md-2">
         <h2> interact </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
         <p>Explore Automating.NYC <a href="https://automating.nyc/" target="_blank">here</a>.</p>
 
@@ -89,26 +117,26 @@
       <div class="col"></div>
     </div>
 
-    <div class="row  description_section">
+    <!--<div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> colors </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
         <img src="img/automatingnyccolors.png" class="swatch" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
 
 
       </div>
       <div class="col"></div>
-    </div>
+    </div> -->
 
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> process </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p> <strong> Background Research </strong> From September through December 2018 we conducted extensive background research focused on literature reviews and interviews with ethics and machine learning experts. In January 2019 through March 2019 we shifted to interviews with city agencies and companies which make the proprietary algorithms for our case studies. </p>
           <p> <strong> Ideation </strong> We used design methodologies like the KJ method and card sorting to storyboard and develop the initial flow of the website.
@@ -120,9 +148,9 @@
     </div>
 
     <div class="row  description_section">
-      <div class="col"></div>
+      <div class="col-md-4"></div>
 
-      <div class="col-md-5">
+      <div class="col-md-6">
         <img src="img/avo_test.JPG" class="body_images_horizontal" alt="an image of a person sitting in front a table with pieces of paper in front of them. the papers have drawings of avocados on them.">
         <p class="image_caption">Usability testing a paper prototype of the toy algorithm.</p>
       </div>
@@ -134,7 +162,7 @@
       <div class="col-md-2">
         <h2> tools </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p> JavaScript <br>
             JQuery <br>
@@ -154,7 +182,7 @@
       <div class="col-md-2">
         <h2> team </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p>  Jon Truong<br>
                 Elyse Voegeli<br>
@@ -173,7 +201,7 @@
       <div class="col-md-2">
         <h2> press </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
           <p>  <a href="https://www.fastcompany.com/90351049/whats-an-algorithm-let-an-avocado-explain" target="_blank"><em>What’s an algorithm? Let an avocado explain.</em></a> Fast Company
 </p>
