--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h2 class="index_list"><a href="10KTablets.html">10K Tablets</a></h2>
         <p><em>data and design to bring older adults online </em></p>
         <p class="tags">  user research + service design + UI/UX design + data viz</p>
-        <h2 class="index_list"><a href="thesis.html">Automating.NYC</a></h2>
+        <h2 class="index_list"><a href="automatingNYC.html">Automating.NYC</a></h2>
         <p><em>interactive storytelling website about predictive analytics in city government </em></p>
         <p class="tags">  user research + UI/UX design + development + data analysis</p>
         <h2 class="index_list"><a href="codeEnforcement.html">UX of Ticketing</a></h2>
