fixed bugs across viewports and margins

--- a/automatingNYC.html
+++ b/automatingNYC.html
@@ -57,6 +57,7 @@
         <div class="col-md-6">
 
           <img src="img/thesis.png" class="body_images_horizontal" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
+          <p class="image_caption">Screencap of the landing page.</p>
 
         </div>
         <div class="col"></div>
