--- a/10KTablets.html
+++ b/10KTablets.html
@@ -22,33 +22,45 @@
 
 <body>
 
-  <div class="container-fluid">
-    <h1>10K Tablets </h1>
-    <div class="row description_section">
-      <div class="col"></div>
-      <div class="col-md-6">
-        <img src="img/10K_header.png" class="header_image" alt="a map of New York City showing C O V I D - 19 rates, broadband access, and population of older adults in N Y C H A housing">
-      </div>
-      <div class="col"></div>
+  <div class="row  page_header">
+    <div class="col-md-4"></div>
+    <div class="col-md-6">
+      <h1>10K Tablets </h1>
     </div>
-
-
-    <div class="row description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h2> coming soon! </h2>
-      </div>
-      <div class="col-md-4">
-
-          <p> This project was part of my work as a UX Designer and Researcher in the NYC Mayor's Office of the Chief Technology Officer. In response to COVID-19, we distributed 10,000 internet-enabled tablets to vulnerable older adults in public housing. I was involved in the end-to-end service design of the program including creating data visualizations to rapidly identify participants, designing a holistic unboxing experience, designing an accessible onboarding app, creating an internal tracking dashboard to visualize program stats, and conducting evaluative user research with participants. </p>
-          <p >I'll be updating the details of this project soon. In the meantime, you can check out <a href= "img/cto_opendataweek_10ktabletsPDF.pdf" target="_blank">my presentation on the work</a> for the <a href="https://2021.open-data.nyc/" target="_blank"> 2021 NYC Open Data Week</a>. </p>
-
-      </div>
-      <div class="col"></div>
-    </div>
-
-
+    <div class="col"></div>
   </div>
+
+<div class="container-fluid page-container">
+
+  <div class="row description_section">
+    <div class="col"></div>
+    <div class="col-md-2">
+      <h2> coming soon! </h2>
+    </div>
+    <div class="col-md-6">
+
+        <p>         This project was part of my work as a UX Designer and Researcher in the NYC Mayor's Office of the Chief Technology Officer. In response to COVID-19, we distributed 10,000 internet-enabled tablets to vulnerable older adults in public housing. I was involved in the end-to-end service design of the program including creating data visualizations to rapidly identify participants, designing a holistic unboxing experience, designing an accessible onboarding app, creating an internal tracking dashboard to visualize program stats, and conducting evaluative user research with participants. </p>
+                  <p >I'll be updating the details of this project soon. In the meantime, you can check out <a href= "img/cto_opendataweek_10ktabletsPDF.pdf" target="_blank">my presentation on the work</a> for the <a href="https://2021.open-data.nyc/" target="_blank"> 2021 NYC Open Data Week</a>. </p>
+
+    </div>
+    <div class="col"></div>
+  </div>
+
+    <div class="row  description_section">
+      <div class="col-md-4"></div>
+      <div class="col-md-6">
+
+        <img src="img/10K_header.png" class="body_images_horizontal" alt="a map of New York City showing C O V I D - 19 rates, broadband access, and population of older adults in N Y C H A housing">
+        <p class="image_caption">Screencap of the interactive data visualization used to identify participants.</p>
+
+        </div>
+      <div class="col"></div>
+    </div>
+  </div>
+
+
+
+
 
 
 
