--- a/codeEnforcementOLD.html
+++ b/codeEnforcementOLD.html
@@ -21,36 +21,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
 
-    <div class="row  page_header">
-      <div class="col-md-4"></div>
-      <div class="col-md-6">
-        <h1>ux of ticketing </h1>
-      </div>
-      <div class="col"></div>
-    </div>
 
-  <div class="container-fluid page-container">
+  <div class="container-fluid">
 
-    <div class="row description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h2> tldr </h2>
-      </div>
-      <div class="col-md-6">
 
-          <p>  We redesigned the physical touchpoints and artefacts for Boston's Code Enforcement division to make them more user friendly. The redesign was informed by a discovery sprint and user research throughout.     </div>
-      <div class="col"></div>
-    </div>
+    <h1>ux of ticketing</h1>
 
     <div class="row  description_section">
-      <div class="col-md-4"></div>
+      <div class="col"></div>
       <div class="col-md-6">
-
-        <img src="img/chris.png" class="body_images_horizontal" alt="a screenshot of an image that says 'meet Chris' and tells the story of Chris's fall on unshoveled snow.">
-        <p class="image_caption">Prototype of one informational insert included with the redesigned ticket.</p>
-
+        <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">
+        <img src="img/chris.png" class="header_image" alt="a screenshot of an image that says 'meet Chris' and tells the story of Chris's fall on unshoveled snow.">
+      </a>
       </div>
       <div class="col"></div>
     </div>
@@ -62,9 +47,9 @@
       <div class="col-md-2">
         <h2> client </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> <a href="https://www.boston.gov/departments/public-works/how-we-keep-boston-clean" target="_blank"> Boston Code Enforcement </a> is a division of the Department of Public Works which monitors the city and gives out tickets for code violations (for example, improper shoveling of snow).</p>
+          <p> <a href="https://www.boston.gov/departments/public-works/how-we-keep-boston-clean" target="_blank"> Boston Code Enforcement </a> is a division of the Department of Public Works which monitors the city and gives out tickets for code violations (for example, improper shoveling of snow).</p>
 
       </div>
       <div class="col"></div>
@@ -76,9 +61,9 @@
       <div class="col-md-2">
         <h2> problem </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> How might we spark behavior change in Boston residents resulting in fewer tickets given and more tickets paid?</p>
+          <p> How might we spark behavior change in Boston residents resulting in fewer tickets given and more tickets paid?</p>
 
       </div>
       <div class="col"></div>
@@ -89,7 +74,7 @@
       <div class="col-md-2">
         <h2> insights </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
         <p> Our user research revealed three key insights. One, city residents did not understand their code enfocement responsibilities and the exact requirements to avoid code violations. Two, residents were mistrustful of the envelopes. Many people didn't realise this was an official envelope from the City of Boston and threw them away. Three, people found the tickets difficult to understand.</p>
         <p> The key elements of our redesign were therefore authority, simplicity, and plain language.</p>
@@ -103,59 +88,72 @@
       <div class="col-md-2">
         <h2> solution </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an educational insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
-        <p> View all of our redesigns and learn more <a href= "img/CodeEnforcementPresentation.pdf" target="_blank">here</a>.</p>
+          <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an educational insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
+
+          <p> View all of our redesigns and learn more <a href= "img/CodeEnforcementPresentation.pdf" target="_blank">here</a>.</p>
 
       </div>
       <div class="col"></div>
     </div>
 
-
     <div class="row  description_section">
-      <div class="col-md-4"></div>
+      <div class="col"></div>
 
-      <div class="col-md-3">
+      <div class="col-md-4">
         <img src="img/originalenvelope.png" class="body_images_horizontal" alt="a green violation envelope">
         <p class="image_caption">The original envelope.</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <img src="img/newenvelope.png" class="body_images_horizontal" alt="a red violation envelope">
         <p class="image_caption">The redesigned envelope.</p>
       </div>
-        <div class="col"></div>
+      <div class="col"></div>
     </div>
+<!--
+    <div class="row  description_section">
+      <div class="col"></div>
+
+      <div class="col-md-4">
+        <img src="img/old_ticket.png"  alt="a green violation envelope">
+        <p class="image_caption">The original ticket.</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/new_ticket.png"  alt="a red violation envelope">
+        <p class="image_caption">The redesigned ticket.</p>
+      </div>
+      <div class="col"></div>
+    </div> -->
 
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> process </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-
-                  <p> <strong> User Research </strong> From January through March 2019 we did background research through data analysis, best practices in other cities, ride alongs with officers, and interviews/observations with users (Boston residents) interacting with Code Enforcement.  </p>
-                  <p> <strong> Prototyping </strong> In March through May, we brainstormed solutions and prototyped our 5 touchpoints. We created lo-fi versions of each idea and tested them in the real world, updating and improving each time. Some of the designs went through as many as 8 iterations and 58 user interviews.  </p>
-                  <p> In May we settled on our final versions and handed them off to the city where they'll be rolled out to over 600,000 Boston residents. </p>
-                  <p> Learn more about our process <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">here</a>.</p>
+          <p> <strong> User Research </strong> From January through March 2019 we did background research through data analysis, best practices in other cities, ride alongs with officers, and interviews/observations with users (Boston residents) interacting with Code Enforcement.  </p>
+          <p> <strong> Prototyping </strong> In March through May, we brainstormed solutions and prototyped our 5 touchpoints. We created lo-fi versions of each idea and tested them in the real world, updating and improving each time. Some of the designs went through as many as 8 iterations and 58 user interviews.  </p>
+          <p> In May we settled on our final versions and handed them off to the city where they'll be rolled out to over 600,000 Boston residents. </p>
+          <p> Learn more about our process <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">here</a>.</p>
       </div>
       <div class="col"></div>
     </div>
 
     <div class="row  description_section">
-      <div class="col-md-4"></div>
+      <div class="col"></div>
 
-      <div class="col-md-3">
+      <div class="col-md-4">
         <img src="img/userprofile1.png" class="body_images_horizontal profiles" alt="a green violation envelope">
         <p class="image_caption">One of the five user profiles we developed.</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <img src="img/userprofile2.png" class="body_images_horizontal profiles" alt="a red violation envelope">
         <p class="image_caption">Another of our user profiles. </p>
       </div>
-        <div class="col"></div>
+      <div class="col"></div>
     </div>
 
     <div class="row description_section">
@@ -163,12 +161,12 @@
       <div class="col-md-2">
         <h2> tools </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> Inkscape <br>
-          Adobe Illustrator <br>
-          Tableau <br>
-        </p>
+          <p> Inkscape <br>
+            Adobe Illustrator <br>
+            Tableau <br>
+          </p>
 
       </div>
       <div class="col"></div>
@@ -179,14 +177,13 @@
       <div class="col-md-2">
         <h2> team </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p>Clare Herceg<br>
-        Naeha Rashid<br>
-        Ariana Soto<br>
-        Elyse Voegeli<br>
-        Clarisa Yerovi</p>
-
+          <p>Clare Herceg<br>
+          Naeha Rashid<br>
+          Ariana Soto<br>
+          Elyse Voegeli<br>
+          Clarisa Yerovi</p>
 
       </div>
       <div class="col"></div>
@@ -199,14 +196,13 @@
       <div class="col-md-2">
         <h2> learnings </h2>
       </div>
-      <div class="col-md-6">
-        <p> This project was a careful balance between practical solutions and big-picture systems thinking. Balancing the needs of the client while keeping the end user in mind was a rewarding challenge.</p>
+      <div class="col-md-4">
+
+          <p> This project was a careful balance between practical solutions and big-picture systems thinking. Balancing the needs of the client while keeping the end user in mind was a rewarding challenge.</p>
+
       </div>
       <div class="col"></div>
     </div>
-
-
-
 
   </div>
 
@@ -226,3 +222,5 @@
   <script src="js/main.js"></script>
 
 </body>
+
+</html>
