updated open source doc

--- a/openMRS.html
+++ b/openMRS.html
@@ -24,27 +24,55 @@
 
 <body>
 
-  <div class="container-fluid">
-    <h1>open source documentation</h1>
-
-    <div class="row  description_section">
-      <div class="col"></div>
+    <div class="row  page_header">
+      <div class="col-md-4"></div>
       <div class="col-md-6">
-        <a href="http://devmanual.openmrs.org/en/" target="_blank">
-        <img src="img/openMRSscreenshot.PNG" class="header_image" alt="a screenshot of a website that says 'Welcome to OpenMRS. Write code, save lives.'">
-      </a>
+        <h1>open source documentation </h1>
       </div>
       <div class="col"></div>
     </div>
+
+  <div class="container-fluid page-container">
+  <!--  <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-6">
+        <a href="https://automating.nyc/" target="_blank">
+        <img src="img/thesis.png" class="header_image" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
+      </a>
+      </div>
+      <div class="col"></div>
+    </div> -->
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h2> tldr </h2>
+      </div>
+      <div class="col-md-6">
+
+          <p> We wrote a New Developer Guide to help new members of the Open Medical Record System (OpenMRS) Community get started contributing.      </div>
+      <div class="col"></div>
+    </div>
+
+      <div class="row  description_section">
+        <div class="col-md-4"></div>
+        <div class="col-md-6">
+
+          <img src="img/openMRSscreenshot.PNG" class="body_images_horizontal"  alt="a screenshot of a website that says 'Welcome to OpenMRS. Write code, save lives.'">
+          <p class="image_caption">Screencap of digital guide.</p>
+
+        </div>
+        <div class="col"></div>
+      </div>
+
 
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> client </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
-          <p> <a href="https://openmrs.org/" target="_blank"> OpenMRS </a> is a Free and Open Source Software which provides medical record systems for use in resource scarce environments (over 20 countries worldwide).</p>
+                  <p> <a href="https://openmrs.org/" target="_blank"> OpenMRS </a> is a Free and Open Source Software which provides medical record systems for use in resource scarce environments (over 20 countries worldwide).</p>
 
       </div>
       <div class="col"></div>
@@ -56,9 +84,10 @@
       <div class="col-md-2">
         <h2> problem </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
-          <p> How can we break down the barrier to entry for new open source software contributers and bring them into the OpenMRS Community?</p>
+        <p> How can we break down the barrier to entry for new open source software contributers and bring them into the OpenMRS Community?</p>
+
 
       </div>
       <div class="col"></div>
@@ -69,9 +98,9 @@
       <div class="col-md-2">
         <h2> solution </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
-          <p> An online and print guide to getting started with OpenMRS, which was later converted into a gitbook. View the guide <a href="http://devmanual.openmrs.org/en/" target="_blank">here</a>.</p>
+        <p> An online and print guide to getting started with OpenMRS, which was later converted into a gitbook. View the guide <a href="http://devmanual.openmrs.org/en/" target="_blank">here</a>.</p>
 
       </div>
       <div class="col"></div>
@@ -80,32 +109,55 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h2>process </h2>
+        <h2> process </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
-          <p> <strong> User Research </strong> From June to August 2013, I was an intern with the GNOME Outreach Project for Women. As an intern, I was partnered with OpenMRS to work on <strong>restructuring their documentation to make it more user friendly</strong>. I interviewed community members with experiences ranging from brand new to more that 20 years of experience. From these interviews, I created templates for documentation pages and a plan for restructuring the documentation wiki used by OpenMRS.  </p>
-          <p> <strong> Docs Sprint </strong> In September, I joined my teammates for Google Summer of Code Doc Camp in Mountainview California. Over the course of the 5 day sprint, we created the OpenMRS New Developer Guide.
-          <p>You can read about my process <a href="https://evoegesopw.wordpress.com/" target="_blank"> here</a>.  </p>
+        <p> <strong> User Research </strong> From June to August 2013, I was an intern with the GNOME Outreach Project for Women. As an intern, I was partnered with OpenMRS to work on <strong>restructuring their documentation to make it more user friendly</strong>. I interviewed community members with experiences ranging from brand new to more that 20 years of experience. From these interviews, I created templates for documentation pages and a plan for restructuring the documentation wiki used by OpenMRS.  </p>
+        <p> <strong> Docs Sprint </strong> In September, I joined my teammates for Google Summer of Code Doc Camp in Mountainview California. Over the course of the 5 day sprint, we created the OpenMRS New Developer Guide.
+        <p>You can read about my process <a href="https://evoegesopw.wordpress.com/" target="_blank"> here</a>.  </p>
 
       </div>
       <div class="col"></div>
     </div>
 
-    <div class="row description_section">
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h2> timeline </h2>
+      </div>
+      <div class="col-md-6">
+
+        <p>June 2012 - September 2012 </p>
+      </div>
+      <div class="col"></div>
+    </div>
+
+
+
+    <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> team </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
-          <p>Michael Downey<br>
-          Eric Holscher<br>
-          Suranga Nath Kasthurirathne<br>
-          Daniel Kayiwa<br>
-          Jordan Kellerstrass<br>
-          Elyse Voegeli</p>
+        <p>Michael Downey<br>
+        Eric Holscher<br>
+        Suranga Nath Kasthurirathne<br>
+        Daniel Kayiwa<br>
+        Jordan Kellerstrass<br>
+        Elyse Voegeli</p>
+      </div>
+      <div class="col"></div>
+    </div>
 
+    <div class="row  description_section">
+      <div class="col-md-4"></div>
+
+      <div class="col-md-6">
+        <img src="img/openMRSbook.jpg" class="body_images_horizontal" alt="a stack of books with stethoscopes on the cover.">
+        <p class="image_caption">A stack of new printed guides. Some developers work offline in low-resources environments.</p>
       </div>
       <div class="col"></div>
     </div>
@@ -117,15 +169,21 @@
       <div class="col-md-2">
         <h2> learnings </h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
 
-          <p> This was one of the first short-term independent projects I ever worked on. I had a steep learning curve with working remotely, managing my own time and schedule, and planning out the research direction.</p>
+        <p> This was one of the first short-term independent projects I ever worked on. I had a steep learning curve with working remotely, managing my own time and schedule, and planning out the research direction.</p>
 
       </div>
       <div class="col"></div>
     </div>
 
+
+
+
+
+
   </div>
+
 
 
 
