updated photography section

--- a/automatingNYC.html
+++ b/automatingNYC.html
@@ -158,6 +158,18 @@
       <div class="col"></div>
     </div>
 
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h2> timeline </h2>
+      </div>
+      <div class="col-md-6">
+
+        <p>October 2018 - May 2019 </p>
+      </div>
+      <div class="col"></div>
+    </div>
+
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
