--- a/photography.html
+++ b/photography.html
@@ -22,23 +22,31 @@
 
 <body>
 
-  <h1>photography</h1>
+  <div class="row  page_header art_header">
+    <div class="col"></div>
+    <div class="col-md-6">
+      <h1>photography </h1>
+    </div>
+    <div class="col"></div>
+  </div>
 
-  <div class="container-fluid art_pages">
+
+
+  <div class=" -fluid page-  art_pages">
 
     <div class="row row4">
-      <div class="col-md-6 container" id="photography">
+      <div class="col-md-6 ">
         <img src="img/photos/door.jpg" alt="an orange door with a black and white border" class="art_image">
-        <div class="overlay">
-          <div class="text"> accra ghana <br> 2012 </div>
-        </div>
+
+          <div class="image_caption art_caption"> accra ghana <br> 2012 </div>
+
       </div>
 
-      <div class="col-md-6 container" id="photography">
+      <div class="col-md-6 ">
         <img src="img/photos/wonderwheel.jpg" alt="a widescreen view of a carnival next to the ocean" class="art_image">
-        <div class="overlay">
-          <div class="text"> coney island new york <br> 2016 </div>
-        </div>
+
+             <div class="image_caption art_caption"> coney island new york <br> 2016 </div>
+
       </div>
 
 
@@ -47,113 +55,113 @@
 
     <div class="row row2">
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/tortie.jpg" alt="a tortoiseshell cat with a blue background" class="art_image">
-        <div class="overlay">
-          <div class="text"> somerville <br> massachusetts <br> 2016 </div>
-        </div>
+
+             <div class="image_caption art_caption"> somerville <br> massachusetts <br> 2016 </div>
+
       </div>
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/man.jpg" alt="a black and white photo of a man standing in a rocky landscape" class="art_image">
-        <div class="overlay">
-          <div class="text"> savai'i <br> samoa <br> 2017 </div>
-        </div>
+
+             <div class="image_caption art_caption"> savai'i <br> samoa <br> 2017 </div>
+
       </div>
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/street.jpg" alt="a colorful street" class="art_image">
-        <div class="overlay">
-          <div class="text"> toulouse <br> france <br> 2018 </div>
-        </div>
+
+             <div class="image_caption art_caption"> toulouse <br> france <br> 2018 </div>
+
       </div>
 
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/shoes.jpg" alt="a pair of shoes in the sand" class="art_image">
-        <div class="overlay">
-          <div class="text"> monterey <br> california <br> 2017 </div>
-        </div>
+
+             <div class="image_caption art_caption"> monterey <br> california <br> 2017 </div>
+
       </div>
 
     </div>
     <div class="row row1">
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="art_image">
-        <div class="overlay">
-          <div class="text"> new orleans <br> louisiana <br> 2016 </div>
-        </div>
+
+             <div class="image_caption art_caption"> new orleans <br> louisiana <br> 2016 </div>
+
       </div>
 
-      <div class="col-md-3 container" id="photography">
-        <img src="img/photos/candles.jpg" alt="set of candles in blue containers" class="art_image">
-        <div class="overlay">
-          <div class="text"> new hampshire <br> 2017 </div>
-        </div>
+      <div class="col-md-3  "  >
+        <img src="img/photos/candles.jpg" alt="set of candles in blue  s" class="art_image">
+
+             <div class="image_caption art_caption"> new hampshire <br> 2017 </div>
+
       </div>
 
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/fan.jpg" alt="a blue fan reflected in the water" class="art_image">
-        <div class="overlay">
-          <div class="text"> new york <br> new york <br> 2015 </div>
-        </div>
+
+             <div class="image_caption art_caption"> new york <br> new york <br> 2015 </div>
+
       </div>
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/coffee.jpg" alt="a black and white picture of a coffee shop sign" class="art_image">
-        <div class="overlay">
-          <div class="text"> new york <br> new york <br> 2015 </div>
-        </div>
+
+             <div class="image_caption art_caption"> new york <br> new york <br> 2015 </div>
+
       </div>
     </div>
 
     <div class="row row2">
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/waterdoor.jpg" alt="a door and its reflection in a canal" class="art_image">
-        <div class="overlay">
-          <div class="text"> annecy <br> france <br> 2013 </div>
-        </div>
+
+             <div class="image_caption art_caption"> annecy <br> france <br> 2013 </div>
+
       </div>
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/graffitti.jpg" alt="an alleyway with brightly coloured graffiti" class="art_image">
-        <div class="overlay">
-          <div class="text"> cambridge <br> massachusetts <br> 2014 </div>
-        </div>
+
+             <div class="image_caption art_caption"> cambridge <br> massachusetts <br> 2014 </div>
+
       </div>
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/elephant2.jpg" alt="a yellow carving of an elephant" class="art_image">
-        <div class="overlay">
-          <div class="text"> jaipur <br> india <br> 2012 </div>
-        </div>
+
+             <div class="image_caption art_caption"> jaipur <br> india <br> 2012 </div>
+
       </div>
 
 
-      <div class="col-md-3 container" id="photography">
+      <div class="col-md-3  "  >
         <img src="img/photos/cat.jpg" alt="a cat sleeping on a blue stool" class="art_image">
-        <div class="overlay">
-          <div class="text"> punta mona <br> costa rica <br> 2016 </div>
+
+             <div class="image_caption art_caption"> punta mona <br> costa rica <br> 2016 </div>
         </div>
       </div>
     </div>
 
     <div class="row rowbottom">
 
-      <div class="col-md-6 container" id="photography">
+      <div class="col-md-6  "  >
         <img src="img/photos/beach.JPG" alt="a widescreen stormy beach with a hut" class="art_image">
-        <div class="overlay">
-          <div class="text"> namua samoa <br> 2017 </div>
-        </div>
+
+             <div class="image_caption art_caption"> namua samoa <br> 2017 </div>
+
       </div>
 
 
-      <div class="col-md-6 container" id="photography">
+      <div class="col-md-6  "  >
         <img src="img/photos/decay.JPG" alt="a rusting piece of metal with the ocean in the background" class="art_image">
-        <div class="overlay">
-          <div class="text"> san salvador bahamas <br> 2015 </div>
-        </div>
+
+             <div class="image_caption art_caption"> san salvador bahamas <br> 2015 </div>
+
       </div>
     </div>
 
