added another project

--- a/automatingNYC.html
+++ b/automatingNYC.html
@@ -47,7 +47,7 @@
       </div>
       <div class="col-md-6">
 
-          <p> We created an interactive, storytelling website to help people understand how data, algorithms, and predictive analytics are used in New York City government.</p>
+          <p> We created an interactive, storytelling website to help people understand how data, algorithms, automated decision systems are used in New York City government.</p>
       </div>
       <div class="col"></div>
     </div>
