--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
         <p><em>data and design to bring older adults online </em></p>
         <p class="tags">  user research + service design + UI/UX design + data viz</p>
         <h2 class="index_list"><a href="automatingNYC.html">Automating.NYC</a></h2>
-        <p><em>interactive storytelling website about predictive analytics in city government </em></p>
+        <p><em>interactive storytelling website about algorithms in city government </em></p>
         <p class="tags">  user research + UI/UX design + development + data analysis</p>
         <h2 class="index_list"><a href="codeEnforcement.html">UX of Ticketing</a></h2>
-        <p>re-design of Boston's code enforcement ticketing touchpoints<p>
-        <p class="tags"><em>  user research + service design + graphic design</em> </p>
+        <p><em>re-design of Boston's code enforcement ticketing touchpoints</em></p>
+        <p class="tags"> user research + service design + graphic design </p>
   <!--      <h2><a href="trustpatterns.html">trust patterns</a></h2>
         <p>re-design of Boston's ticketing touchpoints </p>
-        <p><em>  user research + service design + graphic design</em></p>
+        <p><em>  user research + service design + graphic design</em></p> -->
         <h2><a href="subwayPacman.html">subway pacman</a></h2>
-        <p>interactive game concept for subways </p>
-        <p><em>  interaction design + graphic design</em></p> -->
+        <p> <em>interactive game concept for subways </em></p>
+        <p class="tags">  interaction design + graphic design</p>
         <h2><a href="openMRS.html">open source documentation</a></h2>
-        <p><em> new developer guide for a OpenMRS, a free and open source medical record system</em> <p>
+        <p><em> new developer guide for a free and open source medical record system</em> </p>
         <p class="tags"> user research + documentation</p>
-        <h2><a href="ceramics.html">ceramics</a></h2>
-        <p><em>just for fun</em><p>
+      <!--  <h2><a href="ceramics.html">ceramics</a></h2>
+        <p><em>just for fun</em><p> -->
         <h2><a href="photography.html">photography</a></h2>
-        <p><em>only a couple of cats</em><p>
+        <p><em>just for fun. only a couple of cats</em><p>
         </div>
 
       </div>
