--- a/subwayPacmanOLD.html
+++ b/subwayPacmanOLD.html
@@ -24,60 +24,34 @@
 
 <body>
 
-    <div class="row  page_header">
-      <div class="col-md-4"></div>
+  <div class="container-fluid">
+    <h1>subway pacman</h1>
+
+    <div class="row  description_section">
+      <div class="col"></div>
       <div class="col-md-6">
-        <h1>subway pacman </h1>
+
+        <img src="img/pacman_gif.gif" class="header_image pacman" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout.">
+
       </div>
       <div class="col"></div>
     </div>
-
-  <div class="container-fluid page-container">
-  <!--  <div class="row  description_section">
-      <div class="col"></div>
-      <div class="col-md-6">
-        <a href="https://automating.nyc/" target="_blank">
-        <img src="img/thesis.png" class="header_image" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
-      </a>
-      </div>
-      <div class="col"></div>
-    </div> -->
-    <div class="row description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h2> tldr </h2>
-      </div>
-      <div class="col-md-6">
-
-          <p> This interactive game concept reimagines pacman in public spaces.</p>    </div>
-      <div class="col"></div>
-    </div>
-
-      <div class="row  description_section">
-        <div class="col-md-4"></div>
-        <div class="col-md-6">
-
-          <img src="img/pacman_gif.gif" class="body_images_horizontal" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout.">
-          <p class="image_caption">The pacpeople in action.</p>
-
-        </div>
-        <div class="col"></div>
-      </div>
-
 
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> context </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> Project for the course Designing for Desirability at the Harvard <a href="https://www.desirabilitylab.com/" target="_bank"> Desirability Lab</a>.</p>
+          <p> Project for the course Designing for Desirability at the Harvard <a href="https://www.desirabilitylab.com/" target="_bank"> Desirability Lab</a>.</p>
 
-        <p> Presented at the 2019 Harvard Design Fair. </p>
+          <p> Presented at the 2019 Harvard Design Fair. </p>
+
       </div>
       <div class="col"></div>
     </div>
+
 
 
     <div class="row description_section">
@@ -85,8 +59,9 @@
       <div class="col-md-2">
         <h2> challenge </h2>
       </div>
-      <div class="col-md-6">
-        <p> How can design for awe through interactivity?</p>
+      <div class="col-md-4">
+
+          <p> How can design for awe through interactivity?</p>
 
       </div>
       <div class="col"></div>
@@ -97,20 +72,33 @@
       <div class="col-md-2">
         <h2> solution </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> We created Subway Pacman for people to playfully engage with strangers on their commute. The Pacman gameboard displays on the digital advertising screens over the subway track. People join via a join link, select an inclusive avatar, and control their Pacperson from their phone. This rift on the classic game is collaborative and lighthearted. </p>
+          <p> We created Subway Pacman for people to playfully engage with strangers on their commute. The Pacman gameboard displays on the digital advertising screens over the subway track. People join via a join link, select an inclusive avatar, and control their Pacperson from their phone. This rift on the classic game is collaborative and lighthearted. </p>
 
       </div>
       <div class="col"></div>
     </div>
 
     <div class="row  description_section">
-      <div class="col-md-4"></div>
+      <div class="col"></div>
 
-      <div class="col-md-6">
+      <div class="col-md-5">
         <img src="img/designfair.JPG" class="body_images_horizontal" alt="three young women smiling and holding their phones in front of a screen with the pacman boardgame">
         <p class="image_caption">Participants enjoying a demo of the game at the Harvard Design Fair.</p>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h2> play </h2>
+      </div>
+      <div class="col-md-4">
+
+          <p> You can play with a live demo by opening the <a href="https://mysterious-ravine-74621.herokuapp.com/" target="_blank">gameboard</a> on your computer, and the <a href="https://sheltered-headland-71101.herokuapp.com" target="_blank">controller</a> on your phone.</p>
+
       </div>
       <div class="col"></div>
     </div>
@@ -120,51 +108,22 @@
       <div class="col-md-2">
         <h2> process </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-
-                  <p> We drew inspiration from the concept of <strong> sonder</strong>, "the realization that each random passerby is living a life as vivid and complex as your own". We wanted people to playfully engage with strangers around them, and focused on commute times as the perfect opportunity for brief interactions with a familiar game.</p>
-                  <p> We redesigned the classic Pacman avatar to be more inclusive, and launched a proof of concept web app. </p>
+          <p> We drew inspiration from the concept of <strong> sonder</strong>, "the realization that each random passerby is living a life as vivid and complex as your own". We wanted people to playfully engage with strangers around them, and focused on commute times as the perfect opportunity for brief interactions with a familiar game.</p>
+          <p> We redesigned the classic Pacman avatar to be more inclusive, and launched a proof of concept web app. </p>
       </div>
-      <div class="col"></div>
-    </div>
-
-
-
-    <div class="row  description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h2> play </h2>
+      <div class="col">
       </div>
-      <div class="col-md-6">
-
-        <p> You can play with a live demo by opening the <a href="https://mysterious-ravine-74621.herokuapp.com/" target="_blank">gameboard</a> on your computer, and the <a href="https://sheltered-headland-71101.herokuapp.com" target="_blank">controller</a> on your phone.</p>
-
-      </div>
-      <div class="col"></div>
-    </div>
-
-
-
-    <div class="row  description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h2> timeline </h2>
-      </div>
-      <div class="col-md-6">
-
-        <p>April 2019 </p>
-      </div>
-      <div class="col"></div>
     </div>
 
     <div class="row  description_section">
-      <div class="col-md-4"></div>
+      <div class="col"></div>
 
-      <div class="col-md-6">
+      <div class="col-md-5">
         <img src="img/pacpeople.png" class="body_images" alt="a screenshot of a phone with four pacman characters, pacman, pacwoman, a pacperson with a rainbow hat, and a pacperson in a wheelchair">
         <p class="image_caption">Wireframe of inclusive pacman characters.</p>
-        </div>
+      </div>
       <div class="col"></div>
     </div>
 
@@ -173,14 +132,13 @@
       <div class="col-md-2">
         <h2> tools </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-        <p> JavaScript <br>
-          Figma <br>
-          InDesign <br>
-          InVision <br>
-        </p>
-
+          <p> JavaScript <br>
+            Figma <br>
+            InDesign <br>
+            InVision <br>
+          </p>
 
       </div>
       <div class="col"></div>
@@ -191,25 +149,19 @@
       <div class="col-md-2">
         <h2> team </h2>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
 
-
-                  <p>Melissa Kwan<br>
-                    Kelvin Tejeda<br>
-                  Elyse Voegeli<br>
+          <p>Melissa Kwan<br>
+            Kelvin Tejeda<br>
+          Elyse Voegeli<br>
 
       </div>
       <div class="col"></div>
     </div>
 
 
-
-
-
-
-
-
   </div>
+
 
 
   <!--feather icons library-->
