--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
             <p>I am a designer and data analyst committed to making tech accessible, accountable, and delightful. </p>
         <p> In my free time, I enjoy taking care of my 77 pandemic plants, reading queer fantasy novels, and making cat puns. I apawlogize in advance.</p>
-        <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin"></i></a>
+        <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github" aria-label="Link to Elyse's Github"></i></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin" aria-label="Link to Elyse's LinkedIn"></i></a>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter"></i></a>
+        <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter" aria-label="Link to Elyse's Twitter"></i></a>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://www.instagram.com/evogues/" target="_blank"><i data-feather="instagram"></i></a></p>
+        <a href="https://www.instagram.com/evogues/" target="_blank"><i data-feather="instagram" aria-label="Link to Elyse's Instagram"></i></a></p>
       </div>
       </div>
       <div class="col-md-6 order-md-1 index_column_left">
