--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -99,6 +99,20 @@
     </div>
 
     <div class="row  description_section">
+      <div class="col-md-4"></div>
+
+      <div class="col-md-3">
+        <img src="img/userprofile1.png" class="body_images_horizontal profiles" alt="a green violation envelope">
+        <p class="image_caption">One of the five user profiles we developed.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="img/userprofile2.png" class="body_images_horizontal profiles" alt="a red violation envelope">
+        <p class="image_caption">Another of our user profiles. </p>
+      </div>
+        <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h2> solution </h2>
@@ -146,17 +160,16 @@
 
     <div class="row  description_section">
       <div class="col-md-4"></div>
+      <div class="col-md-6">
 
-      <div class="col-md-3">
-        <img src="img/userprofile1.png" class="body_images_horizontal profiles" alt="a green violation envelope">
-        <p class="image_caption">One of the five user profiles we developed.</p>
+        <img src="img/code_enforcement_process.jpg" class="body_images_horizontal" alt="a blackboard with clusters of sticky notes and chalked circles around them.">
+        <p class="image_caption">Was it even a design session if there were no sticky notes?</p>
+
       </div>
-      <div class="col-md-3">
-        <img src="img/userprofile2.png" class="body_images_horizontal profiles" alt="a red violation envelope">
-        <p class="image_caption">Another of our user profiles. </p>
-      </div>
-        <div class="col"></div>
+      <div class="col"></div>
     </div>
+
+
 
     <div class="row  description_section">
       <div class="col"></div>
